logs/structx.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/StructX-1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/structx'...
Compiling './lib/python3.5/site-packages/structx/atalk.py'...
***   File "./lib/python3.5/site-packages/structx/atalk.py", line 58
    print "use n.sr, n.s and n.r,  n is a %r"%(n)
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/structx/elf.py'...
***   File "./lib/python3.5/site-packages/structx/elf.py", line 90
    raise ValueError,"No symbol for address %x"%(addr)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/structx/ethernet.py'...
***   File "./lib/python3.5/site-packages/structx/ethernet.py", line 93
    except AttributeError,e: warn("failed setting IPv4.data._parent_ip: %r"%(e,))
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/structx/gui.py'...
***   File "./lib/python3.5/site-packages/structx/gui.py", line 69
    print "Could not move iter backwards"
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/structx/packetlib.py'...
***   File "./lib/python3.5/site-packages/structx/packetlib.py", line 34
    raise ValueError,"%s does not have many args"%(clsname(obj))
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/structx/smb.py'...
***   File "./lib/python3.5/site-packages/structx/smb.py", line 173
    print "choose_bdata:",(self,smbpkt,args)
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/structx/test_module.py'...
***   File "./lib/python3.5/site-packages/structx/test_module.py", line 9
    print "A.get_b run"
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
